[package]
name = "lufs"
version = "0.1.1"
authors = ["Joe Neeman <joeneeman@gmail.com>"]
edition = "2018"
readme = "README.md"
description = "Audio loudness measurements"
license = "MIT"
repository = "https://github.com/jneem/lufs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
